<resources>

    <string name="app_name">Sample_App</string>
    <string name="welcome_user"> welcome </string>
    <string name="task_dashboard">Task Dashboard</string>
    <string name="student_registration">Student Registration</string>
    <string name="check_now_viewbinding">Check now • ViewBinding</string>
    <string name="check_now">Check Now</string>
    <string name="login_amp_signup"><![CDATA[Login & Signup]]></string>
    <string name="login_databinding">Login • DataBinding</string>
    <string name="recyclerview">RecyclerView</string>
    <string name="check_now_livedata">Check now • LiveData</string>
    <string name="open_recyclerview">Open RecyclerView</string>
    <string name="api_calling_retrofit">Api Calling - Retrofit</string>
    <string name="registration_local_db">Registration • Local DB (SQLite/Room)</string>
    <string name="local_database">Local Database</string>
    <string name="livedata">LiveData</string>
    <string name="signup_post_api">Signup • POST API</string>
    <string name="get_and_post_calling">Get and Post calling</string>
    <string name="activity_lifecycle">Activity Lifecycle</string>
    <string name="check_now_text">Check Now</string>
    <string name="koltin_basic"><![CDATA[kotline :Variables & Data Types ,Conditions Loops ,Functions,Null Safety]]></string>
    <string name="student_result_form">Student Result Form</string>
    <string name="student_name">Student Name</string>
    <string name="roll_number">Roll Number</string>
    <string name="percentage">Percentage</string>
    <string name="passed">Passed</string>
    <string name="attendance">Attendance (%)</string>
    <string name="email_optional">Email (Optional)</string>
    <string name="mobile_optional">Mobile (Optional)</string>
    <string name="subtitle_loginscreen">Login to your account</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="welcome">welcome</string>
    <string name="signup_your_account">Signup Your Account</string>
    <string name="email_address">Email Address *</string>
    <string name="password">Password *</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="login">Login</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="characters">Characters</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment"> this is list fragment </string>
    <string name="home_fragment">home fragment</string>
    <string name="profile_fragment">profile fragment</string>
    <string name="enter_character_name">Enter Character name</string>
    <string name="service_in_android">Service in android</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="android_notification">Android Notification</string>

</resources>